[gd_scene load_steps=18 format=2]

[ext_resource path="res://scenes/GetStarted.gd" type="Script" id=1]
[ext_resource path="res://scenes/InitPane.gd" type="Script" id=2]
[ext_resource path="res://assets/images/controls2.png" type="Texture" id=3]
[ext_resource path="res://assets/images/controls1.png" type="Texture" id=4]
[ext_resource path="res://assets/images/icons/initscreen.png" type="Texture" id=5]
[ext_resource path="res://assets/images/icons/logo.png" type="Texture" id=6]
[ext_resource path="res://assets/SourceCodeVariable-Roman.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://assets/images/icons/no_controller.png" type="Texture" id=8]
[ext_resource path="res://assets/images/icons/start_controller.png" type="Texture" id=9]
[ext_resource path="res://assets/images/icons/wrong.png" type="Texture" id=10]
[ext_resource path="res://assets/images/icons/ok.png" type="Texture" id=11]
[ext_resource path="res://assets/images/icons/keyreleased.png" type="Texture" id=12]
[ext_resource path="res://assets/images/icons/keypressed2.png" type="Texture" id=13]
[ext_resource path="res://assets/images/press.png" type="Texture" id=14]
[ext_resource path="res://assets/music/intromusic.ogg" type="AudioStream" id=15]

[sub_resource type="DynamicFont" id=1]

size = 42
use_mipmaps = false
use_filter = true
font_data = ExtResource( 7 )
_sections_unfolded = [ "Settings" ]

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 12 ), ExtResource( 13 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="GetStarted" type="Node2D"]

position = Vector2( 478.852, 291.12 )
script = ExtResource( 1 )

[node name="InitPane" type="Node2D" parent="." index="0"]

visible = false
z_index = 1
script = ExtResource( 2 )
_sections_unfolded = [ "Visibility" ]

[node name="controls2" type="Sprite" parent="InitPane" index="0"]

visible = false
position = Vector2( 33.1024, 9.01252 )
scale = Vector2( 0.291921, 0.241975 )
texture = ExtResource( 3 )

[node name="controls1" type="Sprite" parent="InitPane" index="1"]

visible = false
position = Vector2( 33.053, 9.13736 )
scale = Vector2( 0.291681, 0.241699 )
texture = ExtResource( 4 )

[node name="Background" type="Sprite" parent="InitPane" index="2"]

position = Vector2( 33.2121, 9.00418 )
scale = Vector2( 1.00004, 0.828715 )
texture = ExtResource( 5 )

[node name="Logo" type="Sprite" parent="InitPane" index="3"]

position = Vector2( -146.779, -125.627 )
scale = Vector2( 0.7515, 0.7515 )
texture = ExtResource( 6 )

[node name="Label" type="Label" parent="InitPane" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -448.0
margin_top = 230.0
margin_right = 177.0
margin_bottom = 284.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "Press any button to start"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="Background" type="Polygon2D" parent="." index="1"]

position = Vector2( -480.335, -290.966 )
polygon = PoolVector2Array( 0, 0, 1024, 0, 1024, 600, 0, 600 )
uv = PoolVector2Array(  )
color = Color( 0.466667, 0.701961, 0.996078, 1 )
vertex_colors = PoolColorArray(  )
offset = Vector2( 0, 0 )
antialiased = false
texture = null
texture_offset = Vector2( 0, 0 )
texture_scale = Vector2( 1, 1 )
texture_rotation_degrees = 0.0
invert_enable = false
invert_border = 100.0

[node name="NoController" type="Sprite" parent="." index="2"]

position = Vector2( -314.961, 112.54 )
scale = Vector2( 2, 2 )
texture = ExtResource( 8 )
_sections_unfolded = [ "Transform" ]

[node name="Controller" type="Sprite" parent="." index="3"]

position = Vector2( 122.581, -146.208 )
scale = Vector2( 0.339018, 0.339018 )
texture = ExtResource( 9 )

[node name="ControllerNOTOK" type="Sprite" parent="Controller" index="0"]

visible = false
position = Vector2( 780.463, -6.48419 )
scale = Vector2( 17, 17 )
texture = ExtResource( 10 )
_sections_unfolded = [ "Transform" ]

[node name="ControllerOK" type="Sprite" parent="Controller" index="1"]

position = Vector2( 758.351, -2.13541 )
scale = Vector2( 17, 17 )
texture = ExtResource( 11 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="PressKey" type="AnimatedSprite" parent="." index="4"]

position = Vector2( 195.972, 184.359 )
scale = Vector2( 4.45151, 4.45151 )
frames = SubResource( 2 )
animation = "default"
frame = 1
playing = true

[node name="Press" type="Sprite" parent="PressKey" index="0"]

position = Vector2( -0.702805, -27.7388 )
scale = Vector2( 2.056, 2.056 )
texture = ExtResource( 14 )

[node name="Label" type="Label" parent="PressKey" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -9.0
margin_top = -11.0
margin_right = 3.0
margin_bottom = 3.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "G"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors" ]

[node name="Panel" type="Panel" parent="." index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -465.0
margin_top = -277.0
margin_right = -147.0
margin_bottom = -46.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Label" type="Label" parent="Panel" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.02
anchor_bottom = 0.0
margin_left = 9.0
margin_top = 7.0
margin_right = 302.64
margin_bottom = 208.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "This game uses both an X-Box-Like controller and a keyboard. You have to connect a controller before proceeding with your frantic downhill jogging.

Once the controller has been connected, hold both L and R buttons and hold both controller sticks at the starting position, as shown in the figure to the right.

At last, press the required key on your keyboard. If there are no fingers left to do it, don't panic! Just peck your keyboard!"
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Anchor", "Rect" ]

[node name="IntroMusic" type="AudioStreamPlayer" parent="." index="6"]

stream = ExtResource( 15 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = true
mix_target = 0
bus = "Master"


